--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ td {
   padding: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 /* Estilos gerais */
 
 body {
@@ -25,29 +29,24 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   align-items: center;
 }
 
-main img {
-  max-width: 100%;
-  height: 100%;
+main > section {
+  padding: 20px;
 }
 
 main section,
 main article {
+  width: 80vw;
   color: black;
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
-  width: 80%;
-}
-
-#info-squirtle > img {
   display: flex;
-  margin: 0 auto;
+  flex-direction: column;
 }
 
 section h1,
@@ -63,7 +62,7 @@ article h3 {
 }
 
 p {
-  margin-bottom: 16px;
+  gap: 12px;
 }
 
 ul li {
@@ -73,11 +72,11 @@ ul li {
 /* Header */
 
 header {
-  display: flex;
-  justify-content: center;
   background-color: #007bff;
   color: #fff;
   padding: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 header h1 {
@@ -107,15 +106,44 @@ nav a:hover {
   color: #ffc107;
 }
 
+/* Seções */
+
+#info-squirtle img {
+  width: 200px;
+  height: 200px;
+  align-self: center;
+}
+
+#squirtle-img-2 {
+  padding: 25px;
+}
+
+#squirtle-img {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
 #curiosidades li::marker {
   content: '🔍';
 }
 
 #evolucao ul {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-wrap: wrap;
   list-style: none;
+}
+
+#curiosidades ul {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+#evolucao img {
+  height: 150px;
 }
 
 #evolucao figcaption {
@@ -147,7 +175,10 @@ footer {
   background-color: #343a40;
   color: #fff;
   padding: 20px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
   bottom: 0;
 }
 
