--- a/style.css
+++ b/style.css
@@ -27,26 +27,26 @@ body {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin: 0 1rem 0 1rem;
 }
 
-main > section {
-  padding: 20px;
+@media (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+  }
 }
 
 main section,
 main article {
-  width: 80vw;
   color: black;
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
 }
 
 section h1,
@@ -96,6 +96,18 @@ nav ul {
   margin-bottom: 20px;
 }
 
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.hover-img:hover {
+  scale: 1.1;
+  transition: 0.2s ease-in-out;
+}
+
 nav a {
   text-decoration: none;
   color: #fff;
@@ -103,6 +115,7 @@ nav a {
 }
 
 nav a:hover {
+  transition: 0.3s ease-in-out;
   color: #ffc107;
 }
 
@@ -166,6 +179,7 @@ a[target='_blank'] {
 }
 
 a[target='_blank']:hover {
+  transition: 0.15s ease-in-out;
   opacity: 0.8;
 }
 
@@ -183,8 +197,8 @@ footer {
 }
 
 footer a {
-  text-decoration: none;
   transition: color 0.3s ease-in-out;
+  text-decoration: none;
 }
 
 footer a[href*='#'] {
@@ -200,5 +214,6 @@ footer a[href*='tel'] {
 }
 
 footer a[href]:hover {
+  transition: 0.14s ease-in-out;
   opacity: 0.8;
 }
