--- a/style.css
+++ b/style.css
@@ -33,12 +33,6 @@ main {
   margin: 0 1rem 0 1rem;
 }
 
-@media (max-width: 768px) {
-  main {
-    grid-template-columns: 1fr;
-  }
-}
-
 main section,
 main article {
   color: black;
@@ -96,13 +90,6 @@ nav ul {
   margin-bottom: 20px;
 }
 
-@media (max-width: 768px) {
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
 .hover-img:hover {
   scale: 1.1;
   transition: 0.2s ease-in-out;
@@ -128,7 +115,7 @@ nav a:hover {
 }
 
 #squirtle-img-2 {
-  padding: 25px;
+  padding: 3rem;
 }
 
 #squirtle-img {
@@ -136,6 +123,7 @@ nav a:hover {
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  margin: 0 10px;
 }
 
 #curiosidades li::marker {
@@ -157,6 +145,7 @@ nav a:hover {
 
 #evolucao img {
   height: 150px;
+  margin: 0 2rem;
 }
 
 #evolucao figcaption {
@@ -216,4 +205,25 @@ footer a[href*='tel'] {
 footer a[href]:hover {
   transition: 0.14s ease-in-out;
   opacity: 0.8;
+}
+
+@media (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  #evolucao figcaption {
+    font-size: 16px;
+  }
+
+  header h1 {
+    font-size: 20px;
+  }
+
+  section h2 {
+    font-size: 18px;
+  }
 }
