--- a/style.css
+++ b/style.css
@@ -75,6 +75,12 @@ header {
 
 header h1 {
   font-size: 24px;
+  text-decoration: none;
+  color: white;
+}
+
+header a {
+  text-decoration: none;
 }
 
 /* Lista de navegação */
