--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ footer {
   flex-direction: column;
   align-items: center;
   gap: 12px;
-  bottom: 0;
+  margin: 41.5vh 0 0 0;
 }
 
 footer a {
