--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -1,54 +1,69 @@
-body,
-h1,
-h2,
-p,
-ul,
-ol,
-li,
-figure,
-table,
-th,
-td {
+* {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'Arial', sans-serif;
   display: grid;
-  min-height: 100vh;
   grid-template-rows: auto 1fr auto;
-  background-color: #f4f4f4;
-}
-
-#task-input {
-  display: flex;
-  padding: 1rem;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 100vw;
-}
-
-#input {
-  padding: 0.5rem;
-}
-
-#button {
-  padding: 0.5rem;
-  background-color: #0074d9;
-  border-color: #0074d9;
-  color: #f4f4f4;
-}
-
-header,
-footer {
-  background-color: #333;
+  font-family: Arial, Helvetica, sans-serif;
   color: white;
-  text-align: center;
+  min-height: 100vh;
+}
+
+header {
+  background-color: #333;
   padding: 1rem;
+  text-align: center;
+}
+
+main {
+  background-color: #f4f4f4;
+  color: black;
 }
 
 footer {
-  grid-row: 3;
+  display: flex;
+  flex-direction: column;
+  background-color: #333;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+#form {
+  padding: 1rem;
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#form input {
+  padding: 8px;
+}
+
+#form button {
+  background-color: #0074d9;
+  border: none;
+  padding: 8px;
+  color: white;
+  cursor: pointer;
+}
+
+#form button:hover {
+  transition: ease-in-out 0.1s;
+  background-color: #1793ff;
+}
+
+#task-list {
+  display: flex;
+  flex-direction: column;
+  list-style: decimal;
+  margin-left: 2rem;
+}
+
+#task-list li {
+  text-align: left;
 }
