--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -1,69 +1,108 @@
-* {
+/* Reset de estilos para garantir consistência em diferentes navegadores */
+body,
+h1,
+h2,
+p,
+ul,
+ol,
+li,
+figure,
+table,
+th,
+td {
   margin: 0;
   padding: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
+  font-family: 'Arial', sans-serif;
+  color: #333;
+  background-color: #f4f4f4;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
   min-height: 100vh;
 }
 
-header {
+header,
+footer {
   background-color: #333;
-  padding: 1rem;
+  color: #fff;
+  padding: 20px;
   text-align: center;
 }
 
 main {
-  background-color: #f4f4f4;
-  color: black;
+  padding: 16px;
 }
 
-footer {
+main form {
   display: flex;
   flex-direction: column;
-  background-color: #333;
-  justify-content: center;
+  gap: 10px;
   align-items: center;
-  padding: 1rem;
+  width: 40ch;
+  margin: 0 auto;
 }
 
-#form {
-  padding: 1rem;
-  gap: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-#form input {
+input,
+textarea {
+  width: 100%;
   padding: 8px;
+  font-size: 16px;
 }
 
-#form button {
+input,
+textarea::placeholder {
+  font-family: 'Arial', sans-serif;
+}
+
+#save-task,
+#update-task,
+#cancel-update {
   background-color: #0074d9;
+  color: #fff;
   border: none;
-  padding: 8px;
-  color: white;
+  padding: 8px 16px;
   cursor: pointer;
 }
 
-#form button:hover {
-  transition: ease-in-out 0.1s;
-  background-color: #1793ff;
+ul {
+  list-style: none;
+  padding: 0;
+  max-width: 80ch;
+  margin: 0 auto;
 }
 
-#task-list {
+main ul li div {
   display: flex;
-  flex-direction: column;
-  list-style: decimal;
-  margin-left: 2rem;
+  justify-content: space-between;
 }
 
-#task-list li {
-  text-align: left;
+.open-modal {
+  background: none;
+  background-color: #676767;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+li {
+  margin: 8px 0;
+  padding: 20px;
+  border: solid 1px #ccc;
+}
+
+li p {
+  white-space: pre-wrap;
+  margin-top: 10px;
 }
